RollCake MF Broker v0.0.2
- Rename broker.js to mf-broker.js
- Rename BROKE attribute of WINDOW_VARIABLE constant to MF_BROKER
- Update references of WINDOW_VARIABLE

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# Locks
+package-lock.json
+yarn.lock
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
